--- a/_posts/2019-06-30-MEVN교과서-(5).md
+++ b/_posts/2019-06-30-MEVN교과서-(5).md
@@ -589,6 +589,8 @@ i(1.0); // 20
 #### 4.4.2 실시간 통신 : websocket방식과 polling 방식 비교  
 실시간 통신이란 보통 Websocket으로 통신한다는 것은 HTTP를 기반으로 설정된 **ws프로토콜**을 통해 양방향통신을 하는 것을 말합니다.WebSocket 객체를 통해 양방향통신을 하는데 이 객체는 서버와의 WebSocket 연결을 생성하고 관리할 수 있는 API 들을 제공하며 가장 유명한 라이브러리로는 Socket.io가 있습니다. 하지만 오래된 브라우저의 경우(IE8이하) 미지원되므로 이 때는 websocket이 아닌 polling 방식, 주기적인 요청 또는 long polling, RESPONSE 받게 되면 REQUEST를 다시 요청(무한 재귀함수)로 구현해야 합니다. 
 
+ > Q : Ajax랑 다른점이 뭔가요? 클라이언트에서 요청하지 않아도 서버에서 클라이언트에게 원하는 시간대에 원하는 데이타를 줄 수 있다는 점입니다. 
+
 #### 4.4.3 센서생성 서버 구축
 센서데이타서버를 구축하는 방법은 크게 3가지가 있습니다. 첫번째는 정말 센서를 사서 구축하는 것이며 두번째는 기상청 Open API를 받는 것이며 세번째는 방재기상포털의 있는 파일을 통해 구축하는 방법입니다. 우리는 세번째 방법으로 해보겠습니다. 날짜는 2019년 8월2일 기준으로 했으며 지역은 제가 사는 강동구를 중심으로 했습니다. 방재기상포털은 https://data.kma.go.kr 에 가면 정말 쉽게 자료들을 다운받을 수 있으며 여기서 구축하는 예제의 파일은  MEVN/4장/sensor/RESTAPI/data/20190802_강동구.csv 에 저장해 두었습니다.  
 
@@ -627,68 +629,221 @@ db.createUser({
 
 이제 앞서 설명한 createUser을 하면 sensor에 다빈이가 추가된 것을 볼 수 있습니다. `db.getUsers()`로 유저를 확인할 수 있습니다.
 
+socket으로 conenction또는 reconnection이 될 때 유니크한 id(string)을 가집니다. 이를 이용해 연결된 user의 수 등의 로직을 구현할 수 있습니다. 이외에 클라이언트에서 지정해준 인자로 서버에서 관리할 수 있습니다.  
+
+주석을 달 때는 첫번째 문자는 대문자로 해줘야 합니다.
 서버에 들어가 node server.js로 서버를 구동시키고 클라이언트에서는 npm run serve를 통해 테스트 서버를 구동시킵니다.
 #### MEVN/4장/sensor/서버/server.js
 ```js
 const express = require('express')
 const app     = express()
+const cors    = require('cors')
 const http    = require("http").createServer(app)
-const io      = require('socket.io')(http); 
+const io      = require('socket.io')(http)
+const util    = require('./util')()
+const sensorController = require('./controller/sensor')
 const path    = require('path')  
-const _path   = path.join(__dirname, './dist')  
-const PORT    = 12027
-const sensorController = require('./controller/sensor'); 
-const mongoose = require('mongoose');  
-const mongoDB  = 'mongodb://127.0.0.1/my_database';
-//계정 설정 MongoDB 계정 보안 설정 이야기
-// mongoose.connect('mongodb://아이디:비밀번호@호스트:포트/admin', { dbName: '사용할 데이터베이스' });
-  
- 
-
-const main = async ()=>{
+const _path   = path.join(__dirname, '..', './dist')  
+const PORT    = 12010 
+const mongoose = require('mongoose')
+//계정 설정 MongoDB 계정 보안 설정 이야기 
+const USER = 'dabin'
+const PWD = 'dabin12010'
+const HOST = 'localhost:27017'
+const DB = 'sensor'
+const mongodbURL = `mongodb://${USER}:${PWD}@${HOST}/${DB}`
+mongoose.connect(mongodbURL, {useNewUrlParser: true}); 
+mongoose.set('useFindAndModify', false);
+let userList = [];
+const main = async()=>{
   //app 객체 설정 
-  app.use('/', express.static(_path)) 
-  // const isDBconnection = await mongoose.connect(mongoDB, { useNewUrlParser: true });
-  // console.log(isDBconnection); 
-//   mongoose.connect(mongoDB, { useNewUrlParser: true })
-// .then(() =>  console.log('connection succesful'))
-// .catch((err) => console.error(err));
- 
-  io.on('connection', (socket, b) =>{
-    //socket client 이벤트 연결 
-    //두번째 인자에는 뭐가 있을지 궁금
-    console.log(b)
+  app.use('/', express.static(_path))  
+  app.use(cors()) 
+  mongoose.connect(mongodbURL, {useNewUrlParser: true}) 
+  .then(() =>  console.log('connection succesful'))
+  .catch((err) => console.error(err)) 
+  //io 객체 설정 
+  io.on('connection', (socket) =>{  
+    console.log(`User connected :: ${util._date()} ID : ${socket.id}`)   
+    userList.push(socket.id) 
     socket.on('chat message', (msg) =>{
       console.log('message: ' + msg);
     }); 
-    socket.on('disconnect', (client) => {
-      //client 빼기 
-      //clients.splice(clients.indexOf(io.nickname),1); 
-    }); 
+    socket.on('disconnect', () => {  
+      console.log(`User disconnected :: ${util._date()} ID : ${socket.id}`)  
+      userList.splice(userList.indexOf(socket.id),1); 
+    });  
   }); 
+  const jsonArray = await util.readCSV(); 
+  setInterval(async () => {   
+    const sensor = await sensorController.emitSensorAndSave(io, jsonArray); 
+    console.log(`Emit user Current Sensor And Save DB :: ${util._date()} ${JSON.stringify(sensor)}`) 
+  }, 10 * 1000);   
 
-  // 이터레이러터를 만들어서 하는 것은..? yeild 하는 것은?
-  let cnt = 0; 
-  const jsonArray = await require('./sensorRead.js')().readCSV();
-  const l = jsonArray.length;   
-  setInterval(() => {
-    let data = jsonArray[cnt % l]
-    
-    data.id = Number(data.id); 
-    data.time = new Date(data.time); 
-    data.temp = Number(data.temp); 
-    data.wv = Number(data.wv); 
-    data.humi = Number(data.humi);
-
-    data = {cnt : cnt % l, ...data} 
-    io.emit(data); 
-    //sensorController.save(data); 
-  }, 1000 * 10);
-  //console.log(io.sockets)   
-  app.listen(PORT, ()=> console.log(`센서서버 구동..! : 시작 http://127.0.0.1:${PORT}`));
+  http.listen(PORT, ()=> console.log(`센서서버가 시작됩니다. http://127.0.0.1:${PORT} :: ${util._date()}`));
 }
+
 main();  
 ``` 
+
+#### MEVN/4장/sensor/서버/controller/senser.js
+```js
+const Sensor = require('../models/sensor.js'); 
+const _ = require("fxjs/Strict"); 
+const save = async(data)=> {
+    const ret = await Sensor.findOneAndUpdate({
+        "cnt" : {
+            $eq : data.cnt
+        }}, {
+            $set : data
+        }, {
+            upsert: true, 
+            multi: true, 
+            new : true, 
+            setDefaultsOnInsert: true
+        }
+    ).lean()
+    return ret;  
+};
+// 전역변수로 증가시키는 setNextData
+let cnt = 0;   
+const setType = data =>{
+    for(let key in data){
+        if(key == 'time')data[key] = new Date(data[key])
+        else data[key] = Number(data[key])
+    } 
+    return data; 
+}
+const setNextData = (jsonArray) =>{
+    const l = jsonArray.length;    
+    let data = jsonArray[cnt];  
+    data = {cnt : cnt, ...setType(data)} 
+    cnt = (cnt + 1) % l; 
+    return data;    
+}  
+
+// 이터레이터로도 만들 수 있다. 
+function *setCntIterator() {  
+    let cnt = 0; 
+    while (true) {
+        yield cnt;
+        cnt = (cnt + 1);  
+    }
+} 
+
+const iterator = setCntIterator(); 
+const setNextDataIterator = (jsonArray) =>{
+    const l = jsonArray.length;      
+    const cnt = _.go(
+        iterator, 
+        _.take(1));
+    let data = jsonArray[cnt % l]; 
+    data = {cnt : cnt, ...setType(data)};
+    return data;    
+}
+
+
+//testModule
+exports.emitSensorAndSave = (io, jsonArray)=>{
+    return new Promise((resolve, reject) =>{
+        const data = setNextData(jsonArray) 
+        //const data = setNextDataIterator(jsonArray) 
+        io.emit(data); 
+        save(data); 
+        resolve(data)
+    }) 
+} 
+```
+
+#### MEVN/4장/sensor/서버/models/senser.js
+```js
+const Sensor = require('../models/sensor.js'); 
+const _ = require("fxjs/Strict"); 
+const save = async(data)=> {
+    const ret = await Sensor.findOneAndUpdate({
+        "cnt" : {
+            $eq : data.cnt
+        }}, {
+            $set : data
+        }, {
+            upsert: true, 
+            multi: true, 
+            new : true, 
+            setDefaultsOnInsert: true
+        }
+    ).lean()
+    return ret;  
+}
+
+// 전역변수로 증가시키는 setNextData
+let cnt = 0;   
+const setType = data =>{
+    for(let key in data){
+        if(key == 'time')data[key] = new Date(data[key])
+        else data[key] = Number(data[key])
+    } 
+    return data; 
+}
+const setNextData = (jsonArray) =>{
+    const l = jsonArray.length;    
+    let data = jsonArray[cnt];  
+    data = {cnt : cnt, ...setType(data)} 
+    cnt = (cnt + 1) % l; 
+    return data;    
+}  
+
+// 이터레이터예제
+function *setCntIterator() {  
+    let cnt = 0; 
+    while (true) {
+        yield cnt;
+        cnt = (cnt + 1);  
+    }
+} 
+
+const iterator = setCntIterator(); 
+const setNextDataIterator = (jsonArray) =>{
+    const l = jsonArray.length;      
+    const cnt = _.go(
+        iterator, 
+        _.take(1));
+    let data = jsonArray[cnt % l]; 
+    data = {cnt : cnt, ...setType(data)};
+    return data;    
+}
+
+exports.emitSensorAndSave = (io, jsonArray)=>{
+    return new Promise((resolve, reject) =>{
+        const data = setNextData(jsonArray) 
+        //const data = setNextDataIterator(jsonArray) 
+        io.emit(data); 
+        save(data); 
+        resolve(data)
+    }) 
+} 
+
+```
+#### MEVN/4장/sensor/서버/util/index.js
+```js
+const csvFilePath = '../data/20190802_강동구.csv' 
+const csv         = require('csvtojson') 
+const path        = require('path')  
+const _path       = path.join(__dirname, csvFilePath)  
+ 
+const _form = date => ("00" + date).slice(-2)   
+module.exports = () => {
+    return {
+        async readCSV() {
+            //const jsonArray = await csv().fromFile(csvFilePath);
+            return await csv().fromFile(_path);
+        }, 
+        _date(){
+            const d = new Date(); 
+            return `${d.getFullYear()}-${_form(d.getMonth() + 1)}.${_form(d.getDate())} ${_form(d.getHours())}:${_form(d.getMinutes())}:${_form(d.getSeconds())}`
+        }
+    };
+} 
+```
 
 그다음은 제너레이터를 이용한 예제입니다. 
 
