--- a/_posts/2019-06-30-MEVN교과서-(4).md
+++ b/_posts/2019-06-30-MEVN교과서-(4).md
@@ -68,7 +68,8 @@ const f = c => c + 1
 #### 2.1 map
 map은 함수 a를 받는 고차함수입니다. 
 
- > map이나 filter는 어떠한 값 [a]를 받아 새로운 []를 
+ > map이나 filter는 어떠한 값 [a]를 받아 새로운 []를 리턴하는 모나드 함수의 일종입니다. 
+
 ```js
 const a = (a)=>{
     return a + 10; 
@@ -99,16 +100,10 @@ var a_lazy = a(12010);
 a_lazy();
 // 12010 
 ```
-위의 코드는 a라는 함수가 함수를 리턴하고 다시 a_lazy에다가 함수를 할당하는 코드입니다. 이렇게 함수를 안에서 다시 리턴해서 실행시점을 지연시킬 수 있습니다.  
+위의 코드는 a라는 함수가 함수를 리턴하고 다시 a_lazy에다가 함수를 할당하는 코드입니다. 이렇게 함수를 안에서 다시 리턴하면 실행시점을 지연시킬 수 있습니다.  
 
 #### 3. 커링
-여러개의 파라미터 보다 적은 수의 파라미터를 받아 누락된 파라미터를 인자로 받습니다.  
-그러다가 인자가 다 채워지면 함수를 실행하게 됩니다. 커링의 원리는 클로저의 도움을 받는 것으로 이루어집니다. 
-내부함수가 외부함수의 컨텍스트가 소멸이 되도 외부함수의 실행환경, 즉, 인자를 참조하면서 실행시점을 기다리게 됩니다. (평가를 미룬다고도 합니다.)
-1. 파라미터가 클로저로 잡아져있다 라고 생각하시면 쉽습니다. 
-2. 클로저라는 공간을 만들어서 그 안에서 내부함수를 return한다라고 생각하시면 쉽습니다. 
-
-메모이제이션을 할 때도 효과적이며 `Point-free`로 로직을 구현하는데도 효과적입니다.
+여러개의 파라미터 보다 적은 수의 파라미터를 받아 누락된 파라미터를 인자로 받습니다. 함수 하나가 n개의 인자를 받는 과정을 n개의 함수로 쪼개서 각각의 인자를 받고 그 인자가 다 채워지면 그때서야 함수를 실행하게 하는 것을 말합니다. 이렇게 **지연되는실행**이 가능한 이유는 내부함수가 외부함수의 컨텍스트가 소멸이 되도 외부함수의 실행환경을 참조할 수 있는 클로저 덕분입니다. 내부함수는 파라미터가 완성될 때까지 실행시점을 미룰 수 있습니다. 이는 `Point-free`로 로직을 구현하는데도 효과적입니다.
 
 
 #### 3.1 ramda를 이용한 예 
@@ -132,6 +127,7 @@ g(4); //=> 10
 위 코드처럼 어떠한 함수를 만들고 R.curry에 담는다면 그 함수를 토대로 만들어지는 커링함수가 완성됩니다.  
 
 #### 3.3 커스텀커링
+#### ES6 커링
 ```js
 const k_curry = fn => a => b => fn(a, b); 
 const f = k_curry((a, b) => a + b); 
@@ -142,6 +138,8 @@ console.log(ret)
 그렇다면 커링을 한번 만들어보겠습니다. 
 `k_curry`, 2개의 인자를 받을 수 있는 커리를 만들었고 그 커리로 `f`를 래핑, 감싸줍니다. 이제 f는 커링이 가능한 **더하기함수**가 됩니다. 
 저런식으로 평가시점을 늦출 수 있습니다. ES6버전은 위와 같고 ES5버전은 아래와 같습니다. 
+
+#### ES5 커링
 ```js
 var k_curry = function(fn){
     return function(a){
@@ -158,30 +156,31 @@ var ret = f_c(2);
 console.log(ret)
 ``` 
 
-또한 커링을 하게 되면 코드가 간결해집니다. 커링을 한다는 것은 `f(a)(b)`이런식으로 인자를 넣는다는 것인데 이를 이용하면 파이프라인에서 조금 더 간결해집니다. 간결해진다는 것은 조금 더 깔끔해진다는 것이며 깔끔이라는 것은 조금 더 표현력이 증가한다는 것을 뜻합니다. 
+또한 커링을 하게 되면 코드가 간결해집니다. 커링을 한다는 것은 `f(a)(b)`이런식으로 인자를 넣는다는 것인데 이를 통해 조금 더 간결한 코드를 완성할 수 있습니다. 간결해진다는 것은 조금 더 깔끔해진다는 것이며 깔끔이라는 것은 조금 더 표현력이 증가한다는 것을 뜻합니다. 
+
 ```js
-//커링 적용전
-pipe(
-  a => a + 1, 
-  a => filter(a => a % 2, a) 
+const {map, pipe, filter} = require('fxjs') 
+
+//pipe를 사용하기 전 - 함수합성이 복잡
+const f_1 = map(a => a + 1); 
+const f_2 = filter(a => a % 2); 
+const ret = f_2(f_1([1, 2, 3, 4]))
+console.log(ret) // 3, 5
+
+//pipe를 사용함 - 함수합성이 깔끔
+const f_pipe = pipe(
+    map(a => a + 1), 
+    filter(a => a % 2)
 )
+const _ret = f_pipe([1, 2, 3, 4])  
+console.log(_ret) // 3, 5
 ```
-커링을 적용하기 전에는 `filter(a => a % 2, a)` 처럼 인자를 넣어 주어야 합니다. 
-
-```js  
-pipe(
-  a => a + 1, 
-  filter(a => a % 2) 
-) 
-```
-하지만 커링이 적용 후에는 인자를 넣을 필요가 없습니다. 
-
+커링이 들어간 pipe의 예입니다. 함수에 인자를 넣을 필요없이 깔끔하게 로직을 구현할 수 있습니다. 
+ 
 참고로 `fx.js`의 커리는 이런식으로 구현되어있습니다. 
-`..._`로 **남은**인자를 받아서 만약에 남은 인자가 없다면 함수를 실행합니다. 
-즉, 인자가 **완성** 되었다면 실행하게끔 되어있습니다. 
+`..._`로 **남은**인자를 받아서 만약에 남은 인자가 없다면 함수를 실행합니다. 즉, 인자가 **완성** 되었다면 실행하게끔 되어있습니다. 
 ```js
-export const curry = f =>
-  (a, ..._) => _.length ? f(a, ..._) : (..._) => f(a, ..._);
+export const curry = f => (a, ..._) => _.length ? f(a, ..._) : (..._) => f(a, ..._);
 ```
  
 
@@ -228,7 +227,7 @@ console.log(a, b)
 커링이 적용된다면 인자를 집어넣지 않아도 됨을 뜻합니다.  
 
 #### 7. 모나드
-어떠한 값의 결과가 불확실하게 2가지형태 이상으로 나타날 수 있습니다. 이럴 때 컨테이너로 래핑하여 안전하게 연산을 하는 것을 말합니다. 함수형프로그래밍에서는 참조투명성, 입력과 출력이 동일하게 1 : 1 매칭이 되어야 하기 때문에 `try catch`를 쓰게 되면 로직을 담고 있는 컨테이너의 벨트의 라인이 2개로 분리되어 투명성을 잃게 되기 때문입니다. (물론 `try catch`를 써서 애러처리를 할 수도 있습니다만 함수형 프로그래밍에서 써야한다. 안써야 한다. 라고 하는 주장이 나눠집니다. 케바케입니다. 참고로 저는 씁니다.) 
+어떠한 값의 결과가 불확실하게 2가지형태 이상으로 나타날 수 있습니다. 이럴 때 컨테이너로 래핑하여 안전하게 연산을 하는 것을 말합니다. 함수형프로그래밍에서는 참조투명성, 입력과 출력이 동일하게 1 : 1 매칭이 되어야 하기 때문에 `try catch`를 쓰게 되면 로직을 담고 있는 컨테이너의 벨트의 라인이 2개로 분리되어 투명성을 잃게 되기 때문입니다. (물론 `try catch`를 써서 애러처리를 할 수도 있습니다만 함수형 프로그래밍에서 써야한다. 안써야 한다. 라고 하는 주장이 나눠집니다. 저는 쓸 때도 있고 안 쓸 떄도 있습니다.) 
 
 `ramda-fantasy`의 `Either`라는 컨테이너박스에 담아서 
 1. Right메소드로 성공처리로직을 
@@ -248,7 +247,7 @@ const log = x => console.log(x)
 fg('{"temp":36.5}').catch(_ => 'JSON PARSE is not working').then(log)
 ``` 
 
-{"temp":36.5}라는 문자열을 g를 이용해서 JSON Object로 변환합니다. 이 때 Promise를 이용해서 오류가 있다면 then(f)가 아닌 catch로 넘어가게 합니다. 
+`{"temp":36.5}`라는 문자열을 g를 이용해서 JSON Object로 변환합니다. 이 때 Promise를 이용해서 오류가 있다면 then(f)가 아닌 catch로 넘어가게 합니다. 
 #### 7.2 Promise를 이용한 예
 ```js
 const log = console.log
@@ -296,12 +295,11 @@ list라는 배열의 요소 a를 대상으로 f를 순차적으로 실행(평가
  - 이터레이터: `{ value, done }` 객체를 리턴하는 `next()` 를 가진 값
  - 이터러블/이터레이터 프로토콜: 이터러블을 `for...of`, `전개 연산자` 등과 함께 동작하도록한 규약
 
-... 전개연산자는 적용되는 공간에서의 인수들(배열, key-value)에 따라 그 공간에 맞는 인수 또는 요소로 확장할 수 있게 합니다. 전개연산자는 이렇게 활용할 수도 있습니다. 예) `const [head, ...tail] = f();`
+`...` 전개연산자는 적용되는 공간에서의 인수들(배열, key-value)에 따라 그 공간에 맞는 인수 또는 요소로 확장할 수 있게 합니다. 전개연산자는 이렇게 활용할 수도 있습니다. 예) `const [head, ...tail] = f();`
 
 #### 8.3 제너레이터와 이터러블
 제너레이터는 커스텀형 이터레이터로 함수자체가 이터러블을 생성합니다.
-
-참고로 이 제너레이터는 return값을 가질 수있습니다. 그러나 순회할 때 대상에는 포함이 안되지만 `next()`메서드로 계속해서 호출하게 되면 `{value : 리턴값, done : true}`를 반환되게 하는 종결값으로 값이 끝내지게 됩니다.  
+ 
 ```js
 const log = console.log
 function* gen() {
@@ -326,8 +324,8 @@ for (const a of iter) {
     log(a); //10, 30
 } 
 ```
-
-return을 넣었기 때문에 value와 done을 보면 됩니다. 
+참고로 제너레이터는 리턴값을 가질 수있습니다. 그러나 순회할 때 대상에는 포함이 안되지만 `next()`메서드로 계속해서 호출하게 되면 `{value : 리턴값, done : true}`를 반환되게 하는 종결값으로 값이 끝내지게 됩니다.  
+ 
 ```js
 const log = a => console.log(a)
 function* gen() {
@@ -461,12 +459,12 @@ console.log(a)
 
 ``` 
 
-함수형 프로그래밍을 한다면 유인동개발자님이 만든 fx.js를 사용하는 것이 좋습니다. 유인동개발자님은 우리나라에서 함수형 프로그래밍을 제일 잘하는 사람 중 하나이며 lodash, ramda의 장점을 섞어 만든 partial.js의 장본인입니다.  fx.js는 partial.js의 다음 버전 라이브러리입니다. 
+함수형 프로그래밍을 설명하면서 ramda, partial, lodash, fx.js를 이용한 예제를 들었는데요. 결과적으로 유인동개발자님이 만든 fx.js를 사용하는 것이 좋습니다. 유인동개발자님은 우리나라에서 함수형 프로그래밍을 제일 잘하는 사람 중 하나이며 lodash, ramda의 장점을 섞어 만든 partial.js의 장본인입니다. fx.js는 partial.js의 다음 버전 라이브러리입니다. 
 당연히 사용하기도 편리하고 성능도 좋습니다. 앞으로 이어나갈 모든 코드들에는 fx.js가 포함될 예정입니다. 
 함수형 프로그래밍을 조금 더 알고 싶다면 [유인동의 함수형프로그래밍](https://www.inflearn.com/course/%ED%95%A8%EC%88%98%ED%98%95-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/#) 을 보기를 권장드립니다.  
 
 ### 3.2 자바스크립트 최적화 
-자 우리는 하나의 패러다임 중 제가 추천하는 함수형프로그래밍을 살펴보았습니다. 그렇다면 자바스크립트의 최적화는 어떻게 진행이 될까요? 먼저 로직을 구성하는데 있어 어떤 것들을 맞추는 것이 중요합니다. 제가 생각하는 것들은 이러한 것이며 개인취향이 강하기 때문에 이런 것들은 팀원들과 상의 후 결정하면 됩니다. 이러한 것들이 미리 정해져 있는 eslint를 써서 정해도 됩니다.  
+우리는 하나의 패러다임 중 제가 추천하는 함수형프로그래밍을 살펴보았습니다. 그렇다면 자바스크립트의 최적화는 어떻게 진행이 될까요? 먼저 로직을 구성하는데 있어 어떤 것들을 맞추는 것이 중요합니다. 제가 생각하는 것들은 이러한 것이며 개인취향이 강하기 때문에 이런 것들은 팀원들과 상의 후 결정하면 됩니다. 이러한 것들이 미리 정해져 있는 eslint를 써서 정해도 됩니다.  
 
 1. 함수, 변수명은 카멜표기법을 사용합니다. 팟홀표기법(underbar 표기법)도 있지만 저는 이걸 추천합니다.  
 2. 간단하더라고 if { 중괄호를 사용해야 한다. 
@@ -474,6 +472,7 @@ console.log(a)
 4. 한 컴포넌트, 모듈의 길이는 200줄 이하로 작성되어야 한다.
 5. 배열순회의 경우 for-in 루프를 쓰지 않습니다. (객체 속성순회일경우에는 씁니다.) 왜냐하면 인스턴스, 프로토타입 체인까지 검색하므로 느립니다.
 6. 정규표현식은 간단하게 씁니다. 예를 들어 ble|blue 대신 blu?e를 씁니다.
+7. 세미콜론은 쓰거나 쓰지 않습니다. D3.js의 경우 쓰고, nightmare.js에서는 쓰지 않습니다. 
 
 ### 3.2.1 함수선택, parseInt와 ~~의 성능비교
 예를 들어 실수형을 정수형으로 만드는 연산이 있습니다. 자바스크립트에서 대표적인 함수로는 parseInt를 뽑을 수 있습니다. 하지만 ~~이라는 비트연산자를 통하면 좀 더 빠르게 구할 수 있습니다. ~~는 ~라는 비트를 전체를 뒤집는 비트연산자를 한 번 더 한 것이며 이를 이용하면 더 빠르게 됩니다. 
@@ -600,7 +599,7 @@ app.listen(12010, ()=> {
 ```
 전에 구축했던 서버랑 비슷합니다. dist라는 폴더를 사용자에게 제공하는 서버입니다. 
 
-#### Q. 여기서 dist 폴더가 아닌 public이라는 폴더를 제공한다면 어떤 코드를 수정해야 할까요?
+ > Q. 여기서 dist 폴더가 아닌 public이라는 폴더를 제공한다면 어떤 코드를 수정해야 할까요?
 
 #### MEVN/3장/dist/index.html
 ```html
@@ -766,4 +765,4 @@ repaint와 reflow가 일어나지 않습니다.
 #### 6. 스타일을 재사용한다. 
 제일 중요합니다. 많은 컴포넌트들 사이에서 재사용할 클래스를 미리 지정해 놓고 사용하는 것이 중요합니다. 예를 들어 A컴포넌트에서 `display : flex`를 사용하는데 B 컴포넌트에서도 `display : flex`를 사용한다면 좋지 않습니다. 부모 컴포넌트에서  `display : flex`를 정의한 후 재사용하는 것이 좋습니다. 
 
-이렇게 함수형프로그래밍 패러다임부터 시작해서 어떻게 코드를 짜는지 자바스크립트, css에서 살펴보았습니다. 이제는 실전입니다! 이제 실시간 데이터 시각화 프로그램을 만들고 미술작가소개플랫폼을 만들 것입니다.
+이렇게 함수형프로그래밍 패러다임부터 시작해서 어떻게 코드를 짜는지 자바스크립트, css까지 살펴보았습니다. 이제는 실전입니다! 이제 실시간 데이터 시각화 프로그램을 만들고 미술작가소개플랫폼을 만들 것입니다.
