--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -12,32 +12,24 @@ excerpt: MEVN교과서 (1)
 ![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/mevnlogo.jpg) 
 
 # 이 책의 장점
-다른 시각화 책을 보면 그저 html파일에 D3.js를 통해 시각화를 한 책이 있는 반면 이 책은 실제 실무에 사용되는 webpack, vue-cli, socket.io를 이용한 실시간 데이터를 대상으로 시각화한 예제로 보다 실무에 적용가능한 예제를 통해 개발실력향상을 도와줍니다. 
-또한, 기본적인 라이브러리 설명에 그치는 것보다는 2년 6개월의 MEVN 프로젝트 경험을 살린 코드로써 필수적인 것들만 담아냅니다. 프로그래밍의 패러다임과 코드를 짜는 법에 대해 서술하고 실무프로젝트가 녹아져있는 책이 되고자했습니다.
+기본적인 라이브러리 설명에 그치는 책보다는 좀 더 실무에 도움이 되는 책이 되고자했습니다. 2년 6개월의 MEVN 프로젝트 경험을 살린 코드로써 필수적인 것들만 담아냅니다. 프로젝트 설계시의 패러다임설정과 아름답게 코드를 짜는 법, 라이브러리 비교하고 보다 경험적인 코드를 녹이고자 했습니다. 
 
-또한, 실시간 데이터 시각화 프로그램뿐만 아니라 미술작가소개플랫폼제작을 통해 보다 대중적인 웹 애플리케이션을 만드는데 용이할 것입니다. 
-
-# 계획
-2019년 출판을 목표로 제가 짠 계획은 다음과 같습니다. 이 계획은 출판사와 협의하에 수정될 수 있습니다. 
-1. 오타, 코드수정, 저작권관련 편집 편집자와 회의하며 책다듬기 : 8 ~ 9월
-2. 베타리더에 의한 피드백 수렴 : 10월
-3. 최종수정 : 11월
-4. 배포 : 12월
+또한, 실시간 데이터 시각화 프로그램뿐만 아니라 작가소개플랫폼제작을 통해 보다 대중적인 웹 애플리케이션을 만드는데 도움이 되고자했습니다. 
 
 ## 할일 목록
  - [ ] mongodb aggregate, mapreduce 예제 코드 수정
  - [ ] 함수형 프로그래밍 설명 다듬기 
  - [ ] MongoDB CRUD 예제 다듬기
-
+ - [ ] 커링 설명 부분 좀 더 쉽게 다듬기
 
 # 지은이의 말
 이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징 그리고 nginX까지 알아보게 될 것입니다. 이를 통해 실전적인 실력을 기르고자 하는 개발자들에게 심층적인 도움이 되었으면 합니다. 
 
-인터넷에 간단히 검색해서 찾을 수 있는 내용들은 최대한 배제해고 최대한 경험과 노하우만을 넣고자 했으며 이해하기 어려운 지식들을 쉽게 설명했으며 아름다운 코드 중심의 설명이 가득한 책이 되고자 노력했습니다. 또한 책의 코드가 그대로 실현되게끔 3번이상의 테스트를 거쳤습니다. 컴퓨터를 다시 켜보고 DB를 다시 삭제하고 코드를 다시 실행하는 등의 테스트를 반복했습니다.
+인터넷에 간단히 검색해서 찾을 수 있는 내용들은 최대한 배제해고 경험 중심의 코드, 이해하기 어려운 지식들을 쉽게 설명한 내용만이 가득한 책이 되고자 노력했습니다. 또한 책의 코드가 그대로 실현되게끔 3번이상의 테스트를 거쳐 책의 코드 그대로 실행이 가능하게끔 노력했습니다.
 
-아울러 이 책에 나오는 모든 예제코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있습니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내주시면 빠르게 답을 드리겠습니다. 공통된 질문에 해당하여 유투브 강의도 제작하겠습니다. 기본적인 사항은 최대한 배제하고자 노력했기 때문에 막히는 부분이 생길수도 있습니다. 열심히 고민하시고 30분이상 삽질했는데도 안되신다면 언제든지 메일을 보내주시기 바랍니다. 
+아울러 이 책에 나오는 모든 예제코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있습니다. 또한 궁금한 사항이 있다면 언제든지 jhc9639@naver.com으로 보내주시면 빠르게 답을 드리겠습니다. 공통된 질문이 많다면 유투브 강의도 제작할 예정입니다. 이 책을 통해 열심히 고민하시고 삽질하시고 언제든지 메일을 보내주시기 바랍니다. 
 
-또한, 저보다 고수분들의 조언도 귀담아 듣겠습니다. 언제든지 쓴 충고와 조언들 부탁드립니다. 감사합니다.
+또한, 책에 틀린 내용이나 지적할 부분이 있다면 귀담아 듣겠습니다. 조언 부탁드립니다. 
 
 # 독자대상
 이 책을 보려면 다음 기술에 대한 기본 지식이 있어야 합니다. 
