--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -21,7 +21,13 @@ excerpt: MEVN교과서 (1)
  - [ ] 함수형 프로그래밍 설명 다듬기 
  - [ ] MongoDB CRUD 예제 다듬기
  - [ ] 커링 설명 부분 좀 더 쉽게 다듬기
-
+ - [ ] topology 설명 추가
+ - [ ] bounds 그림 추가
+ - [ ] projection deep dive 추가
+ - [ ] svg.call 부분 deep dive(다른 돔 Q : 추가)
+ - [ ] 파이제너레이터 설명 추가
+ 
+ 
 # 지은이의 말
 이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징 그리고 nginX까지 알아보게 될 것입니다. 이를 통해 실전적인 실력을 기르고자 하는 개발자들에게 심층적인 도움이 되었으면 합니다. 
 
@@ -62,7 +68,7 @@ excerpt: MEVN교과서 (1)
 - SPA의 장점
 - SPA와 단점 
 - Vue-cli 설정
-- Webpack 구조
+- Webpack
 
 ### 2.4. MongoDB
 - MongoDB의 구조
@@ -187,5 +193,7 @@ excerpt: MEVN교과서 (1)
 - JavaScript 실행컨텍스트와 클로저
 - 브라우저 렌더링의 이해
 - axios 와 비동기통신 
+
+## 부록 E. D3.js의 기초
 
  
