--- a/_posts/2019-06-30-MEVN교과서-(6).md
+++ b/_posts/2019-06-30-MEVN교과서-(6).md
@@ -17,15 +17,19 @@ excerpt: MEVN교과서 (6)
 ### 5.1.1 아키텍처 설계
 ### 5.1.2 REST API 설계 - 전시회정보 API
 ### 5.1.3 CORS 및 주의사항
+API를 개발할 때는 CORS를 해제시키고 해야 쉽습니다. 지금 현재 개발 서버는 8080 포트를 쓰고 REST API인 12010이란 포트를 쓴다고 했을 때 CORS를 쓰지 않는다면 그 API 서버의 자원에 대해 접근이 불가능합니다. 따라서 개발할 때는 CORS를 해제하고 개발을 하고 개발이 끝난 후에는 **인증IP및포트**에 한해서 API를 열어주는 것이 필요합니다. 추후 코드를 통해 살펴보겠습니다.
+     
 ### 5.1.4 요청 제한 및 IP 설정 
+네이버 [MapAPI](https://www.ncloud.com/product/applicationService/maps)를 보면 월 요청을 제한하고 요청한 갯수에 따라 요금을 부과합니다. 많고 많은 API요청은 서버에 부담과 종료를 가져다 줄 수 있기 때문입니다. 우리도 이번에 네이버 Map API와 비슷한 설정을 가진 API를 만들어 볼 것입니다.
 ### 5.1.5 MongoDB 스키마 구축
 ### 5.1.6 디렉토리 설계
 ### 5.1.7 이벤트 설계 
 
-#### 4.4.2 REST API 특징 
-자 이제 센서를 뽑아내는 REST API를 구축할 것인데요. 그 전에 REST API 특징을 살펴보겠습니다. 
+ > REST API란
 
-API는 Application Programming Interface의 약어로 다른 어플리케이션에서 현재 프로그램의 기능을 이용할 수 있도록 하는 어떠한 프로그램이자 자원을 가져올 수 있는 하나의 문입니다. 이 API를 통해 어떤 정보를 모두 제공하거나 제한해서 제공할 수도 있습니다.  
+----- 
+
+API는 Application Programming Interface의 약어로 다른 어플리케이션에서 현재 프로그램의 기능을 이용할 수 있도록 하는 어떠한 프로그램이자 자원을 가져올 수 있는 하나의 문입니다. 이 API를 통해 어떤 정보를 모두 제공하거나 제한해서 제공할 수도 있습니다. 그 중 REST한 규칙을 지킨 API를 REST API라고 합니다. 
 
 #### REST의 정의
 웹에 있는 자원들을 HTTP를 활용하여 효율적으로 얻기위한 아키텍처스타일의 집합을 말합니다. 
@@ -76,9 +80,9 @@ res.json(personObject, [
 이건 HTTP 자체가 Stateless이기 때문에 HTTP를 이용하는 것만으로도 충족이 됩니다. API를 제공해주는 서버는 세션(session)을 그 서버 쪽에 유지하지 않는다는 의미입니다. 
 
 #### 3. Cacheable 
-HTTP 는 원래 캐싱이 됩니다. 새로고침을 하면 304가 뜨면서 원래 있던 js와 css 이미지등을 불러오는 것을 볼 수 있습니다.
-이러한 캐싱은 네트워크 요청을 줄여주며 이는 UX향상에 도움이 됩니다. 네트워크 요청시 해당되는 자원들을 복사해서 메모리에 저장해두었다가 또 같은 요청시 네트워크요청을 하지 않고 브라우저메모리에 있던 자원을 다시 반환합니다. HTTP 메서드 중 GET에 한정되어있으며 `Cache-Control:max-age=100`이런식으로 한정된 시간을 정할 수가 있으며 이 캐싱된 데이타가 유효한지를 판단하기 위해 `Last-modifed` 그리고 `Etag`를 씁니다.   
-`Etag`는 전달되는 값에 태그를 붙여서 캐싱되는 자원인지를 확인해주는 것입니다. 예를 들어 `Cache-Control:max-age=100`으로 형성된 자료는 100초가 지나면 응답이 완료 되었기 때문에 다시 똑같은 자료를 가져올 수 있습니다. 이 때 Etag, 디지털 지문을 사용한다면 똑같은 자원은 캐싱되서 요청을 줄일 수 있습니다 
+HTTP 는 본디 캐싱이 됩니다. 새로고침을 하면 304가 뜨면서 원래 있던 js와 css 이미지등을 불러오는 것을 볼 수 있습니다.
+이러한 캐싱은 네트워크 요청을 줄여주며 이는 UX향상에 도움이 됩니다. 네트워크 요청시 해당되는 자원들을 복사해서 메모리에 저장해두었다가 또 같은 요청시 네트워크요청을 하지 않고 브라우저메모리에 있던 자원을 다시 반환합니다. HTTP 메서드 중 GET에 한정되어있으며(post요청은 캐싱이 되지 않습니다.) `Cache-Control:max-age=100`이런식으로 한정된 시간을 정할 수가 있으며 이 캐싱된 데이타가 유효한지를 판단하기 위해 `Last-modifed` 그리고 `Etag`를 씁니다.   
+`Etag`는 전달되는 값에 태그를 붙여서 캐싱되는 자원인지를 확인해주는 것입니다. 예를 들어 `Cache-Control:max-age=100`으로 형성된 자료는 100초가 지나면 응답이 완료 되었기 때문에 다시 똑같은 자료를 가져올 수 있습니다. 이 때 Etag, 디지털 지문을 사용한다면 똑같은 자원은 캐싱되서 요청을 줄일 수 있습니다 Etag까지 해줘야 완벽한 캐싱이라고 할 수 있습니다. 
 
  > node.js에서는 npm을 다운받아 `res.setHeader('ETag', etag(body))`이렇게 사용됩니다. 
 
@@ -135,13 +139,8 @@ app.put('/users/userid/books/booksid')
 app.patch('/users/userid/books/booksid') 
 // 어떤 유저가 특정 책을 빌립니다. 
 ```
-참고로 `put`과 `patch`의 차이점은 `put`은 전체 자원의 교체이며 `patch`는 일부자원의 교체를 뜻합니다. 
+참고로 `put`과 `patch`의 차이점은 결과값에 있습니다. `put`은 수정된 자원의 전체 결과값 `patch`는 수정된 자원의 그 수정된 부분의 결과값만을 뜻합니다.  
 
-예를 들어 `{"a" : 1, "b" : 2}`가 있을 때 `put`의 경우 `{"a" : 1, "b" : 3}`으로 전체적으로 바꿀 떄 쓰는 것이고
-`patch` 는 `{"b" : 3}`이런식으로 부분적으로 바꾸는 것을 말합니다. 
+예를 들어 `{"a" : 1, "b" : 2}`가 있을 때 b의 키값에 해당하는 값을 3으로 바꾼다고 합시다. `put`의 경우 `{"a" : 1, "b" : 3}`으로 리턴이 되고 `patch` 는 `{"b" : 3}`이런식으로 바꾼 값만이 리턴되는 것이 특징입니다.  
 
-#### 4.4.3 CORS 및 주의사항
-API를 개발할 때는 CORS를 해제시키고 해야 쉽습니다. 지금 현재 개발 서버는 8080 포트를 쓰고 REST API인 12010이란 포트를 쓴다고 했을 때 CORS를 쓰지 않는다면 그 API 서버의 자원에 대해 접근이 불가능합니다. 따라서 개발할 때는 CORS를 해제하고 개발을 하고 개발이 끝난 후에는 **인증IP및포트**에 한해서 API를 열어주는 것이 필요합니다. 추후 코드를 통해 살펴보겠습니다.
-
-#### 4.4.4 요청 제한 및 IP 설정   
-네이버 MAPAPI인 https://www.ncloud.com/product/applicationService/maps 를 보면 월 요청을 제한하고 요청한 갯수에 따라 요금을 부과합니다. 많고 많은 API요청은 서버에 부담과 종료를 가져다 줄 수 있기 때문입니다. 우리도 이번에 네이버 Map API와 비슷한 설정을 가진 API를 만들어 볼 것입니다.  
+-----
