--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -336,7 +336,7 @@ SPA는 서버 렌더링 방식이 아닌 자바스크립트 기반 비동기 모
 
 자 처음으로 Vue-cli로 만들어진 앱이 탄생했습니다! 이제 이걸로 개발을 하면 됩니다. 
 
-### 2.3.5 Webpack 구조
+### 2.3.5 Webpack
 
 ![webpack](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/2_webpack.PNG) 
 우리는 Vue-cli와 Webpack이라는 것을 이용해서 테스트 개발환경을 구축했습니다. 이렇게 하면 Vue로 모듈적으로 개발을 하고 빌드할 때는 html, js, css **정적파일**로 번들이 되어 나오게 됩니다.
@@ -349,6 +349,7 @@ Gulp나 Grunt도 이러한 포장작업 도구들이지만 Webpack이 제일 좋
 웹에는 Vue라는 확장자가 있을 수 없습니다. 우리가 볼 수 있는 화면들은 죄다 html, js, css로 이루어져 있습니다. 하지만 개발을 할 때는 편리하게 vue라는 도구를 쓰고 그 다음 배포할 때 우리가 볼 수 있는 html, js, css로 확장자를 바꿔서 제공할 수 있습니다. 이를 번들이라고 하며 Webpack을 통해 할 수 있습니다.  
 
  > Q : Vue-cli2가 좋나요? Vue-cli3이 좋나요?
+ 
  ----
 
 우선적으로 Vue-cli3이 성능상 좋지만 만약 webpack에서 번들(build) 또는 테스트환경(dev)을 설정할 때 커스터마이징이 필요하다면 Vue-cli2를 사용하는 것이 좋습니다. 물론 Vue-cli3에서도 커스터마이징을 제공하지만 추상화되어있기 때문에 완전한 커스터마이징을 하기에는 쉽지 않습니다. 어떠한 명령에 따라 어떤 파일을 넣고 어떠한 문자열을 바꾸고 그 이후 webpack 을 통해 번들한다면 vue-cli2를 이용하는 것이 좋습니다. 
