--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -17,15 +17,16 @@ excerpt: MEVN교과서 (1)
 또한, 실시간 데이터 시각화 프로그램뿐만 아니라 작가소개플랫폼제작을 통해 보다 대중적인 웹 애플리케이션을 만드는데 도움이 되고자했습니다. 
 
 ## 할일 목록
- - [ ] mongodb aggregate, mapreduce 예제 코드 수정
- - [ ] 함수형 프로그래밍 설명 다듬기 
- - [ ] MongoDB CRUD 예제 다듬기
- - [ ] 커링 설명 부분 좀 더 쉽게 다듬기
- - [ ] topology 설명 추가
+ - [x] 함수형 프로그래밍 설명 다듬기 
+ - [x] MongoDB CRUD 예제 다듬기
+ - [x] topology 설명 추가
+ - [ ] mongodb aggregate, mapreduce 예제 코드 수정 
+ - [ ] 커링 + 파이프 설명 부분 좀 더 쉽게 다듬기 
  - [ ] bounds 그림 추가
  - [ ] projection deep dive 추가
  - [ ] svg.call 부분 deep dive(다른 돔 Q : 추가)
  - [ ] 파이제너레이터 설명 추가 
+ - [ ] sensor chart line 예제 tooltip 및 색깔 커스텀 그리고 지도 예제, 다른 것들 다 box화
  
  
 # 지은이의 말
