--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -609,6 +609,21 @@ module.exports = mongoose.model('Photo', PhotoSchema);
 Photo라는 document의 스키마를 구축 했습니다. 참고로 Photo로 만들면 복수형태로 MongoDB에 저장이 됩니다. Photo > Photoes이며 person을 저장하면 people로 변환되어 저장이 됩니다. MongoDB의 재밌는 특징 중 하나입니다. 
 
 이제 이 스키마를 통해 모델을 만들고 그 모델을 통해 데이타를 삽입, Create, 조회, Read, 수정, Update, 삭제, Delete를 해보겠습니다.
+먼저 공통적인 코드를 작성해보겠습니다. 바로 connection 부분입니다. 먼저 추가한 계정정보와 host, 연결한 DB명을 골라 작동시키면 됩니다. 
+```js
+
+const mongoose = require('mongoose')
+const USER = 'dabin'
+const PWD = 'dabin12010'
+const HOST = 'localhost:27017'
+const DB = 'dbtest'
+const mongodbURL = `mongodb://${USER}:${PWD}@${HOST}/${DB}` 
+mongoose.set('useFindAndModify', false);
+mongoose.connect(mongodbURL, {useNewUrlParser: true}) 
+.then(() =>  console.log('connection succesful'))
+.catch((err) => console.error(err))
+```
+이 공통적인 부분은 아래의 모든 코드의 공통적으로 쓰이며 생략했습니다. 
 
 ## 1. Create
 ### 2장/mongodbs/simple_save.js
@@ -653,9 +668,11 @@ main();
 
 또한, [MongoDB Query](https://docs.mongodb.com/manual/reference/operator/query/)를 보며 공부하실 것을 추천합니다.  
 
- > lean()
+ > 참고 : lean()
 
+ ---- 
 코드의 끝에 lean()이라는 메소드 체인이 걸려있는데 무려 성능차이에서 4배를 일으키는 이 lean()은 순수 자바스크립트 객체를 리턴하는데 쓰입니다. 이것을 쓰지 않는다면 Mongoose의 getters/setters 가 담긴 Mongoose Documents를 리턴하기 때문에 find로 docs를 받을 때 JSON.parse를 무조건 해줘야 합니다. 하지만 이 소주를 추가한다면 그럴 필요 없이 JSON Object로 받을 수 있습니다.
+ ----
 
 
 ## 3. Update
@@ -714,7 +731,7 @@ main();
  
 ```js
 ...
-const main2 = async()=>{  
+const main = async()=>{  
   const t = await Photo.updateMany({
       "title" : {
         $in : ['큰돌', '홍철', '현영','승철']
@@ -730,11 +747,12 @@ const main2 = async()=>{
     }).lean();
   console.log(t)
 }  
-main2();
+main();
 ```
 $in을 사용하면 "그 중 하나 값이 포함되어있다면"을 구현할 수 있습니다. 여러개의 이름이라는 값을 가졌다면 그 값을 update시킵니다.  
 ```js
-const main2 = async()=>{  
+...
+const main = async()=>{  
   const t = await Photo.updateMany({
       "title" : {
         $in : ['큰돌', '홍철', '현영','승철']
@@ -752,12 +770,13 @@ const main2 = async()=>{
     }).lean();
   console.log(t)
 }  
-main2();
+main();
 ``` 
 이외에도 만약에 그 값이 Array이며 push를 하고 싶다면 이렇게 $set부분에 $set이 아닌 $push를 집어 넣으면 됩니다. 
 
 ```js
-const main2 = async()=>{  
+...
+const main = async()=>{  
   const t = await Photo.updateMany({
       "title" : {
         $in : ['큰돌', '홍철', '현영','승철']
@@ -778,7 +797,7 @@ const main2 = async()=>{
     }).lean();
   console.log(t)
 }  
-main2();
+main();
 ``` 
 
 만약에 어떠한 값은 이렇게 set, 정하고 어떠한 값은 push를 하는데 만약에 그 배열이 있다면 있는 것은 그대로 내버려두고 없는 것만 push 하고 싶다면 위와 같이 하면 됩니다. set과 addToSet이 있죠? set으로 어떠한 값을 변경시키고, addToSet으로 중복되는 값은 제외한채 push를 할 수 있습니다. 이렇게 쉽게 json을 설계하듯 query를 마음대로 수정해서 쓰면 됩니다.  
