--- a/_posts/2019-06-30-MEVN교과서-(4).md
+++ b/_posts/2019-06-30-MEVN교과서-(4).md
@@ -16,7 +16,7 @@ excerpt: MEVN교과서 (4)
 코드를 짤 때 그저 주어진 로직만을 짜면 안됩니다. 항상 코드를 짤 떄는 그 코드의 확장성, 유연성, 성능 등을 모두 고려해야 합니다.  
 
 ### 3.1 함수형프로그래밍
-그렇다면 어떻게 짜야 할까요? 한 프로젝트당 코드 패러다임을 정해놓고 짜는 것이 중요합니다.패러다임이란 어떻게 짤 것인지를 규정한 것을 말합니다. 예를 들어서 객체지향형으로, MVC패턴으로 ,함수형프로그래밍으로 짜자 등을 일컫습니다. 예를 들어 CSS의 경우 `margin: 0 px`는 `margin : 0` 으로 놓자 등이 해당합니다.  
+그렇다면 어떻게 짜야 할까요? 한 프로젝트당 코드 패러다임을 정해놓고 짜는 것이 중요합니다.패러다임이란 어떻게 짤 것인지를 규정한 것을 말합니다. 객체지향형으로, MVC패턴으로 ,함수형프로그래밍으로 짜자 등을 일컫습니다. 예를 들어 CSS의 경우 `margin: 0 px`는 `margin : 0` 으로 놓자 등이 해당합니다.  
 
 저는 코드를 짤 때 함수형프로그래밍으로 짜는 것을 추천하며 이 책에서는 함수형프로그래밍으로 모든 소스코드를 짜도록 하겠습니다.
 
@@ -63,7 +63,7 @@ const f = c => c + 1
 #### 2. 고차함수
 함수가 다른 함수를 인자로 받아서 어떠한 로직을 생성하는 함수를 말합니다.  
 
- > 고차함수는 함수를 값자체로 넘길 수 있는 **일급객체**여야만 가능합니다. (고계함수 = 고차함수)
+ > 고차함수는 함수를 값자체로 넘길 수 있는 **일급객체**여야만 가능합니다. 자바스크립트는 일급객체인 특징이 있어 가능한 것입니다. (고계함수 = 고차함수)
 
 #### 2.1 map
 map은 함수 a를 받는 고차함수입니다. 
@@ -131,12 +131,12 @@ g(4); //=> 10
 ```js
 const k_curry = fn => a => b => fn(a, b); 
 const f = k_curry((a, b) => a + b); 
-const f_c = f(1)
+const f_c = f(1);
 const ret = f_c(2);
 console.log(ret)
 ```
 그렇다면 커링을 한번 만들어보겠습니다. 
-`k_curry`, 2개의 인자를 받을 수 있는 커리를 만들었고 그 커리로 `f`를 래핑, 감싸줍니다. 이제 f는 커링이 가능한 **더하기함수**가 됩니다. 
+`k_curry`라는 2개의 인자를 받을 수 있는 커리함수를 만들었고 그 커리로 `f`를 래핑, 감싸줍니다. 이제 f는 커링이 가능한 **더하기함수**가 됩니다. 
 저런식으로 평가시점을 늦출 수 있습니다. ES6버전은 위와 같고 ES5버전은 아래와 같습니다. 
 
 #### ES5 커링
@@ -149,25 +149,26 @@ var k_curry = function(fn){
     }
 }
 var f = k_curry(function(a, b){
-    return a + b
+    return a + b;
 }); 
-var f_c = f(1)
+var f_c = f(1);
 var ret = f_c(2);
 console.log(ret)
 ``` 
 
-또한 커링을 하게 되면 코드가 간결해집니다. 커링을 한다는 것은 `f(a)(b)`이런식으로 인자를 넣는다는 것인데 이를 통해 조금 더 간결한 코드를 완성할 수 있습니다. 간결해진다는 것은 조금 더 깔끔해진다는 것이며 깔끔이라는 것은 조금 더 표현력이 증가한다는 것을 뜻합니다. 
+또한 커링을 하게 되면 코드가 간결해집니다. 커링을 한다는 것은 `f(a)(b)`이런식으로 인자를 넣는다는 것인데 이를 이용하면 함수합성시 pipe 라인에서의 코드를 조금 더 간결하게 만들 수 있습니다. 이를 통해 **표현력**을 증가시킬 수 있습니다.   
 
 ```js
 const {map, pipe, filter} = require('fxjs') 
 
-//pipe를 사용하기 전 - 함수합성이 복잡
+//pipe를 사용하기 전 - 함수합성이 복잡합니다.
 const f_1 = map(a => a + 1); 
 const f_2 = filter(a => a % 2); 
 const ret = f_2(f_1([1, 2, 3, 4]))
-console.log(ret) // 3, 5
-
-//pipe를 사용함 - 함수합성이 깔끔
+console.log(ret) // 3, 5 
+```
+먼저 pipe를 사용하지 않고 함수합성을 한 예입니다. f_1, f_2라는 순서로 합성이 이뤄지지만 보기도 힘듭니다. 이 때 파이프라인을 쓰면 간답힙니다. 또한 fxjs에서 제공하는 map과 filter는 커링이 되어있기 때문에 파이프라인에 넣을 때 간결하게 로직을 구축할 수 있습니다. 
+```js
 const f_pipe = pipe(
     map(a => a + 1), 
     filter(a => a % 2)
@@ -175,6 +176,16 @@ const f_pipe = pipe(
 const _ret = f_pipe([1, 2, 3, 4])  
 console.log(_ret) // 3, 5
 ```
+pipe를 쓰니 좀 더 보기 좋아졌죠? 바로 이것입니다. 
+
+#### fxjs내 map 함수
+```js
+module.exports = curry(function map(f, iter) {
+  return takeAll(mapLazy(f, iter));
+});
+```
+
+
 커링이 들어간 pipe의 예입니다. 함수에 인자를 넣을 필요없이 깔끔하게 로직을 구현할 수 있습니다. 
  
 참고로 `fx.js`의 커리는 이런식으로 구현되어있습니다. 
